fix: projects display on mobile

--- a/src/assets/locale/lg-controller.css
+++ b/src/assets/locale/lg-controller.css
@@ -5,7 +5,7 @@
   background-color: rgba(206, 206, 206, 0.573);
   top:0;
   left:0;
-  z-index: 1;
+  z-index: 4;
 
   gap: 0rem;
   @media (max-width: 768px) {
@@ -30,7 +30,7 @@
   height: 100%;
   top:0;
   left:0;
-  z-index: 2;
+  z-index: 5;
 }
 
 .language-options button{
@@ -53,4 +53,12 @@
 
 .no-scroll {
   overflow: hidden;
+}
+
+.en-button-menu{
+  color: white;
+}
+
+.pt-button-menu{
+  color: white;
 }
