--- a/src/pages/projects.css
+++ b/src/pages/projects.css
@@ -1,10 +1,3 @@
-.main-line {
-  font-size: 80px;
-  white-space: nowrap;
-  animation: slideIn 2s forwards;
-  font-weight: lighter;
-}
-
 @keyframes slideIn {
   from {
       transform: translateX(-10%);
@@ -14,33 +7,79 @@
   }
 }
 
+.projects-presentation{
+  display:flex;
+  flex-direction: column;
+  text-align: justify;
+  width: 59.19rem;
+  padding-top: 1rem;
+  @media (max-width: 768px) {
+    width: 19rem;
+  }
+}
+
 .projects-presentation p{
   font-size: 25px;
   padding-bottom: 1rem;  
   animation: slideIn 2s forwards;
+  @media (max-width: 768px) {
+    font-size:18px;
+  }
 }
 
 .pagina-projetos{
   color:green;
 }
 
+.separation-line-projects{
+  height: 5px;
+  width: 80%;
+  margin-left: 10%;
+  background-color: green;
+  @media (max-width: 768px) {
+    height: 5px;
+    width: 19.52rem;
+    margin-left: 0%;
+    background-color: green;
+  }
+}
+
 .project-tab{
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-bottom: 3rem;
   place-items: center;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    gap: 2rem;
+    width: 100%;
+  }
 }
 
 .project-description{
   width: 30rem;
   text-align: justify;
   hyphens: auto;
+  @media (max-width: 768px) {
+    width: 19rem;
+  }
 }
 
 .project-description h2{
   text-align: center;
   font-size: 2.5rem;
   padding-bottom: 1rem;
+  @media (max-width: 768px){
+    font-size: 2rem;
+    height: auto;
+    padding-left: .5rem;
+    padding-bottom: 1.5rem;
+  }
+}
+
+.project-description p{
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .project-tab img{
